# mlbot

./: .env.example  .env.production.500  .gitignore  CLAUDE.md  CLEANUP_SUMMARY.md  Dockerfile  EMERGENCY_FIX_SUMMARY.md  FILE_CLEANUP_REPORT.md  ISSUES_RESOLVED.md  PHASE1_CHANGES.md  README.md  REPAIR_PLAN.md  SYSTEM_ARCHITECTURE.md  TECHNICAL_INDICATOR_FIX.md  add_daily_report_to_existing.py  api_check.py  apply_bias_correction.sh  apply_fixed_updater.sh  apply_signal_cooldown_patch.py  auto_update_duckdb.py  auto_update_implementation_guide.md  bias_correction_patch.py  check_actual_features.py  check_db_data.py  check_db_tables.py  check_feature_distribution.py  check_features.py  check_latest_dates.py  check_model_output.py  check_position_simple.sh  check_signal_status.sh  check_trading_status.py  check_training_progress.py  confidence_improvement_plan.md  continue_training.py  convert_to_onnx_v4.py  debug_inference_engine.py  debug_inference_issue.py  debug_ml_bot.py  debug_trading_loop.py  (+125 more)
.venv_tf/: pyvenv.cfg
backtest_results/: compound_returns_summary.csv  leverage_3x_trades.csv  leverage_7x_trades.csv  optimized_position_trades.csv  realistic_leverage_trades.csv
catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
catboost_info/test/: events.out.tfevents
cleanup/temp_files/: fix_features.py  production_trading_system.py  quick_test.py  test_dynamic_position_sizing.py  test_prediction.py  trading_with_daily_report.py  verify_model_status.py
cleanup/unused_files/: deploy_critical_fixes.sh  (+1 more)
cleanup_2025_06_20/: analyze_dependencies.py  main_dynamic_integration.py  safe_cleanup.py  simple_improved_bot_fixed.py
config/: prometheus.yml
deployment/: aws_permissions_setup.md  check_trading_status.sh  complete_deploy_500.sh  deploy_daily_report_system.sh  deploy_dynamic_system.sh  deploy_normalized_system.sh  deploy_real_api_integration.sh  deploy_real_api_to_ec2.sh  deploy_to_aws.sh  identify_issues.md  manual_deploy.sh  mlbot_connection_info_500.txt  production_deployment_guide.md  restart_trading_with_3x_leverage.sh  retry_deploy.sh  start_clean_trading_3x.sh  step_by_step_deploy.md
monitoring/: dashboard.py
scripts/: adjust_for_500.py  advanced_feature_engineering.py  analyze_eth_feasibility.py  analyze_long_short_ratio.py  analyze_model_performance.py  analyze_monitoring_frequency.py  backtest_v2_model.py  check_500_feasibility.py  check_data.py  check_data_status.py  check_historical_data.py  check_redis.py  check_status.py  cnn_optimized_profit.py  cnn_profit_model_fast.py  cnn_profit_model_tf.py  collect_btc_eth_icp_auto.py  collect_data.py  collect_eth_icp_only.py  compound_returns_simulation.py  deploy_new_model.sh  download_historical_bybit.py  enhanced_profitability_test.py  ensemble_backtest.py  fast_feature_engineering.py  fast_restore_high_performance_26d.py  feature_selection_optimization.py  fix_model_scaler.py  improved_cascade_backtest.py  monitor_small_account.py  neural_network_model.py  optimize_position_sizing.py  overfitting_check.py  quick_high_performance_model.py  quick_profitability_test.py  quick_ws_test.py  realistic_leverage_backtest.py  start_system.py  stop_system.py  test_balance_monitor.py  (+8 more)
src/: __init__.py
(+194 files in other folders)
